@@ -32,6 +32,7 @@ export(theme_dose)
 export(upsetplot)
 exportClasses(enrichResult)
 exportClasses(gseaResult)
+exportMethods("$")
 exportMethods("[")
 exportMethods("[[")
 exportMethods(cnetplot)
@@ -42,6 +43,10 @@ exportMethods(summary)
 exportMethods(upsetplot)
 importClassesFrom(GOSemSim,GOSemSimDATA)
 importClassesFrom(methods,data.frame)
+importFrom(BiocParallel,MulticoreParam)
+importFrom(BiocParallel,bplapply)
+importFrom(BiocParallel,bpstart)
+importFrom(BiocParallel,bpstop)
 importFrom(DO.db,DOANCESTOR)
 importFrom(DO.db,DOOFFSPRING)
 importFrom(DO.db,DOPARENTS)
@@ -110,9 +115,6 @@ importFrom(igraph,plot.igraph)
 importFrom(igraph,tkplot)
 importFrom(methods,new)
 importFrom(methods,show)
-importFrom(parallel,detectCores)
-importFrom(parallel,mclapply)
-importFrom(plyr,ldply)
 importFrom(qvalue,qvalue)
 importFrom(reshape2,melt)
 importFrom(scales,cscale)
